Fix menu top margin on small devices

--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -1459,3 +1459,10 @@ Home Page bg
 .embed-pagination ul {
 	padding: 10px 0 20px;
 }
+
+@media only screen and (max-width: 768px) {
+	#menuCollapse #navbar {
+		margin: 30px 0 10px;
+		background: #ffffff;
+	}
+}
